--- a/src/server/common/components/heading/_heading.scss
+++ b/src/server/common/components/heading/_heading.scss
@@ -1,5 +1,6 @@
 .app-heading {
   display: flex;
+  padding-bottom:40px;
 }
 
 .app-heading-secondary-info {
